# prototyping.hearts-2025

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: todo.md
.claude/todo.d/: 2025-12-15-000-a000-scaffold-review.md
.github/workflows/: pre-commit.yml
docs/: CLAUDE.md  README.md
docs/dev/: gamestate-interface.md
docs/dev/adr/: 2025-12-13-001-python-poc-rust-prod.md  2025-12-13-002-fastapi-htmx.md  2025-12-13-003-monorepo-structure.md  2025-12-13-004-no-bots-ranked.md  2025-12-13-005-wasm-wgpu-deferred.md  2025-12-13-006-shooter-choice.md  2025-12-13-007-server-authoritative.md  2025-12-15-008-typescript-renderer.md  2025-12-15-009-renderer-agnostic-architecture.md  2025-12-16-010-thin-renderer.md
docs/dev/design-rules.kb/: CLAUDE.md  alternate-constructors.md  colocate-entity-data.md  domain-types.md  eliminate-wrapper-types.md  functions-over-methods.md  immutability.md  lazy-iteration.md  narrow-signatures.md  no-type-ignore.md  single-arg-methods.md  small-focused-modules.md  structural-consistency.md  variable-hygiene.md
docs/dev/devlog/: 2025-12-13-000-initial-planning.md  2025-12-13.md  2025-12-15-000-stack-refinement.md  2025-12-15-001-scaffold-complete.md  2025-12-15.md  2025-12-16-000-engine-core.md  2025-12-16-001-engine-tests-complete.md  2025-12-16-002-design-planning.md  2025-12-16-003-tty-protocol.md  2025-12-16-004-cards-player.md
docs/features.kb/: CLAUDE.md  bots.md  friends-and-chat.md  leaderboards.md  matchmaking.md  pass-the-controller.md  spectating.md  time-controls.md
docs/features.kb/bots.kb/: 000-random.md  010-basic.md  030-counting.md  050-tactical.md  070-analytical.md  090-optimal.md  CLAUDE.md
docs/milestones.kb/: CLAUDE.md  a000-local-prototype.md  a001-local-prototype.md  a010-web-renderer.md  b000-placeholder.md  v000-placeholder.md
docs/rules.kb/: CLAUDE.md  dealing.md  following-suit.md  jack-of-diamonds.md  leading.md  passing.md  scoring.md  shooting-the-moon.md  the-rest-are-mine.md  trick-winning.md
docs/rust-python-analogues.kb/: CLAUDE.md  package-managers.md  project-structure.md  testing.md  web-frameworks.md
docs/tool-equivalence-classes.kb/: CLAUDE.md  package-managers.md  project-structure.md  renderers.md  testing.md  web-frameworks.md
