[project]
name = "hearts-devenv"
description = "developer environment for hearts"
version = "0.0.0"
requires-python = ">=3.13"

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = ["hearts-devenv[dev-test,dev-lint]"]
dev-test = ["pytest", "pytest-cov", "covdefaults", "hypothesis"]
dev-lint = ["pre-commit", "black", "isort", "pyupgrade"]

[dependency-groups]
dev = [
  "hearts-devenv[dev]",
  "hearts-engine",
  "hearts-bot",
  "hearts-renderer-cli",
]

[tool.uv.sources]
hearts-devenv = { workspace = true }
hearts-engine = { workspace = true }
hearts-bot = { workspace = true }
hearts-renderer-cli = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.black]
line-length = 79
target-version = ["py314"]
skip-magic-trailing-comma = true
preview = true
enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets"]

[tool.isort]
line_length = 79
profile = "black"
use_parentheses = true
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_sections = 1

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
addopts = "-vvvvv --durations=10 --doctest-modules --last-failed --strict-markers"
testpaths = ["packages"]
python_files = ["*.py"]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_"]
log_cli_level = "0"

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
show_missing = true
fail_under = 100
skip_covered = false

[tool.pyright]
pythonVersion = "3.14"
include = ["packages"]
exclude = ["**/.*", "**/__pycache__", "**/node_modules"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
analyzeUnannotatedFunctions = true
reportIncompatibleMethodOverride = "error"
enableTypeIgnoreComments = true
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleVariableOverride = "error"
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnusedImport = "error"
